<resources>
    <string name="app_name">Books</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="enter_book_details">Enter Book Details:</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="how_many_stars_would_you_rate_this_book">How many stars would you rate this book?</string>
    <string name="title">Title</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="book_review_details">Book Review Details:</string>
    <string name="titleLabel">Title:</string>
    <string name="number_of_pages_label">Number of Pages:</string>
    <string name="rating">Rating:</string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
</resources>
